<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|center"
    android:background="@drawable/dsfs">


    <Button
        android:id="@+id/bt_start"
        android:layout_width="195dp"
        android:layout_height="61dp"
        android:textSize="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonk"
        android:onClick="onClick"
        android:text="@string/menu_gameStart"
        android:layout_marginBottom="50dp" />
    <Button
        android:id="@+id/bt_rank"
        android:layout_width="195dp"
        android:layout_height="61dp"
        android:textSize="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonk"
        android:onClick="onClick"
        android:text="@string/menu_rankList"
        android:layout_marginBottom="50dp" />
    <Button
        android:id="@+id/bt_set"
        android:layout_width="195dp"
        android:layout_height="61dp"
        android:textSize="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonk"
        android:onClick="onClick"
        android:text="@string/menu_gameSetting"
        android:layout_marginBottom="50dp" />
    <Button
        android:id="@+id/bt_exit"
        android:layout_width="195dp"
        android:layout_height="61dp"
        android:textSize="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonk"
        android:onClick="onClick"
        android:text="@string/menu_gameOver"
        android:layout_marginBottom="50dp" />


</LinearLayout>