<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="@drawable/backg2">
    <TextView
        android:id="@+id/tv_dialog_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/Menu_tv"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_dialog_menu_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menu_me"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"/>
    <Button
        android:id="@+id/bt_dialog_menu_confirm"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:background="@drawable/buttonk"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>